subir el trabajo

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             <section class="container">
                 <section class="row">
                     <section class="col-12 col-md-8">
-                        <h3>AlcolirykoZ</h3>
-                        <img src="./assets/img/foto2.jpg" alt="foto1" class="img-fluid w-100">
+                        <h3>Plan B</h3>
+                        <img src="./assets/img/imagen1.jpg" alt="foto1" class="img-fluid w-100">
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae est, optio obcaecati vitae
                             voluptatibus aliquid eligendi fugit qui. Voluptatibus accusamus laudantium sint similique
                             ducimus, architecto recusandae quia vero exercitationem quo quasi ullam iusto quidem
@@ -60,7 +60,7 @@
                             maiores adipisci aperiam nemo, exercitationem eum at saepe repudiandae! Ad quas ducimus
                             aperiam accusamus? Quae nemo facilis provident ullam exercitationem amet necessitatibus
                             corrupti rem asperiores iusto at atque, quidem dolores!</p>
-                            <img src="./assets/img/foto3.jpg" alt="" class="img-fluid w-100">
+                            <img src="./assets/img/imagen2.jpg" alt="" class="img-fluid w-100">
                     </section>
                     <section class="col-12 col-md-4 align-self-center">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis temporibus illo,
